package dev.dluks.rental.model.customer;

public enum CustomerType {
    INDIVIDUAL,
    CORPORATE
}
