@startuml Vehicle Rental System ERD

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <u>x</u>

hide methods
hide stereotypes

' Entities
table(Vehicle) {
    primary_key(id): UUID
    plate: String
    name: String
    type: VehicleType
    status: VehicleStatus
    dailyRate: BigDecimal
    createdAt: LocalDateTime
    updatedAt: LocalDateTime
}

table(Address) {
    primary_key(id): UUID
    street: String
    number: String
    complement: String
    neighborhood: String
    city: String
    state: String
    zipCode: String
    createdAt: LocalDateTime
    updatedAt: LocalDateTime
}

table(Agency) {
    primary_key(id): UUID
    name: String
    document: String
    phone: String
    email: String
    foreign_key(addressId): UUID
    createdAt: LocalDateTime
    updatedAt: LocalDateTime
}

table(Customer) {
    primary_key(id): UUID
    name: String
    document: String
    type: CustomerType
    phone: String
    email: String
    foreign_key(addressId): UUID
    createdAt: LocalDateTime
    updatedAt: LocalDateTime
}

table(Rental) {
    primary_key(id): UUID
    foreign_key(vehicleId): UUID
    foreign_key(customerId): UUID
    foreign_key(pickupAgencyId): UUID
    foreign_key(returnAgencyId): UUID
    startDate: LocalDateTime
    expectedReturnDate: LocalDateTime
    actualReturnDate: LocalDateTime
    status: RentalStatus
    dailyRate: BigDecimal
    totalAmount: BigDecimal
    discount: BigDecimal
    finalAmount: BigDecimal
    createdAt: LocalDateTime
    updatedAt: LocalDateTime
}

' Enums
enum VehicleType {
    CAR
    MOTORCYCLE
    TRUCK
}

enum VehicleStatus {
    AVAILABLE
    RENTED
}

enum CustomerType {
    INDIVIDUAL
    CORPORATE
}

enum RentalStatus {
    ACTIVE
    COMPLETED
    CANCELLED
}

' Relationships
Vehicle "1" -- "0..*" Rental
Customer "1" -- "0..*" Rental
Agency "1" -- "0..*" Rental : pickup
Agency "1" -- "0..*" Rental : return

Vehicle ..> VehicleType
Vehicle ..> VehicleStatus
Customer ..> CustomerType
Rental ..> RentalStatus

Customer "1" -- "1" Address
Agency "1" -- "1" Address

@enduml